bat.bool1.makes10.Makes10.scala.error
Erreur de compilation :
Makes10:4: error: illegal start of simple expression
} 
^